--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="C:\Web.Development\Cartests\style.css" rel="stylesheet" type="text/css" >
+    <link href="style.css" rel="stylesheet" type="text/css" >
     <title>Car-Project</title>
   </head>
 
   
   <body>
-    <a class="link-style" target="_blank" title="this is a link" href="https://maxpesin.com/">test Blank</a>
-    <a class="link-style" target="_parent" href="https://maxpesin.com/" >test Parent</a>
-    <a class="link-style" target="_self" href="https://maxpesin.com/">test Self</a>
-    <a class="link-style" target="_top" href="https://maxpesin.com/">test Top</a>
+    <div id="link-outer-div">
+      <div class="link-inner-div"> 
+        <a class="link-style" target="_blank" title="this is a link" href="https://maxpesin.com/">test Blank</a>
+      </div>
+      <div class="link-inner-div"> 
+        <a class="link-style" target="_parent" href="https://maxpesin.com/" >test Parent</a>
+      </div>
+      <div class="link-inner-div"> 
+        <a class="link-style" target="_self" href="https://maxpesin.com/">test Self</a>
+      </div>
+      <div class="link-inner-div"> 
+        <a class="link-style" target="_top" href="https://maxpesin.com/">test Top</a>
+      </div>
+    </div>
 
     <h1>About Sportcars</h1>
 
@@ -42,5 +52,6 @@
       <button class="button button2">Blue</button>
     </div>
 
+    
   </body>
 </html>
