change styles and colors from bottom

--- a/index.html
+++ b/index.html
@@ -25,33 +25,25 @@
       </div>
     </div>
 
-    <h1>About Sportcars</h1>
-
-    <p class="p-style"> Max!Im really happy what you my teacher =) Have a good day!</p>
-    <p class="p-style">I can continue a lots of words...</p>
+    <h1>Click here wich class of cars do you prefer</h1>
 
     <div id="myDIV">
-      <h2>My first try =)</h2>
-      <p>HELLLOOOOOOOOOOOOOOOO</p>
-    </div>
-    
-    <img src="Images/142121.jpg" width="125px" height="190px"><menu>HELLO!IM HERE!=)</menu>
-
-    <div style="text-align: right;padding-right: 60px;">
-      <button class="button button1">Green</button>
-      <button class="button button2">Blue</button>
-    </div>
-
-    <div class="div-style">
-      <button class="button button1">Green</button>
-      <button class="button button2">Blue</button>
+      <h2>
+        Ferrari's first SUV!
+      </h2>
+      <p>Ferrari Purosangue,
+        should debute late in 2021
+         before going on sale the 
+         following year.The Ferrari
+         SUV will use a modified version
+         of the new ROMA'S PLATFORM.
+      </p>
     </div>
 
-    <div id="div-style">
-      <button class="button button1">Green</button>
-      <button class="button button2">Blue</button>
+    <div style="text-align: center;">
+      <button class="button button1">Relax Cars</button>
+      <button class="button button2">Speed Cars</button>
     </div>
-
     
   </body>
 </html>
